--- a/index.html
+++ b/index.html
@@ -61,11 +61,17 @@
       100% { transform: translate(0, 0); }
     }
 
+    #giphy, #vhsGlitch, #noiseGif {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 300px;
+      display: none;
+      pointer-events: none;
+    }
+
     #giphy {
-      display: block;
-      margin: 40px auto 20px auto;
-      width: 120px;
-      position: relative;
+      bottom: 20px;
       z-index: 2;
     }
 
@@ -76,7 +82,6 @@
       height: 100%;
       object-fit: cover;
       z-index: 0;
-      position: absolute;
     }
 
     #noiseGif {
@@ -87,7 +92,6 @@
       opacity: 0.08;
       z-index: 1;
       object-fit: cover;
-      position: absolute;
     }
 
     audio {
@@ -102,12 +106,14 @@
       <button class="start-btn" onclick="startSequence()">Click to start...</button>
     </div>
   </div>
-  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="display: none;">
-  <img id="noiseGif" src="noise.gif" alt="Noise" style="display: none;">
+  <img id="giphy" src="giphy.gif" alt="Giphy">
+  <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
+  <img id="noiseGif" src="noise.gif" alt="Noise">
 
   <script>
     const terminal = document.getElementById('terminal');
     const startScreen = document.getElementById('startScreen');
+    const giphy = document.getElementById('giphy');
     const glitch = document.getElementById('vhsGlitch');
     const noise = document.getElementById('noiseGif');
     const bgAudio = document.getElementById('bgAudio');
@@ -130,7 +136,7 @@
       for (let i = 0; i < 2; i++) {
         await typeText(".", 1000);
       }
-      terminal.innerHTML = terminal.innerHTML.slice(0, -4); // удалить две последние точки и <br>
+      terminal.innerHTML = terminal.innerHTML.slice(0, -4);
       await typeText(".", 1000);
     }
 
@@ -161,10 +167,7 @@
       terminal.innerHTML = '';
 
       await sleep(500);
-      const gif = document.createElement('img');
-      gif.src = 'giphy.gif';
-      gif.id = 'giphy';
-      terminal.appendChild(gif);
+      giphy.style.display = 'block';
 
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I prayed. No one answered.”", 200, 'fuchsia');
@@ -182,6 +185,7 @@
 
     async function glitchPhase() {
       terminal.innerHTML = '';
+      giphy.style.display = 'none';
       noise.style.display = 'none';
 
       glitch.style.display = 'block';
@@ -241,7 +245,9 @@
         <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:0;">
         <div class="screen" id="terminal" style="position:relative;z-index:2;"></div>
       `;
+
       const terminal = document.getElementById('terminal');
+      const glitch = document.getElementById('vhsGlitch');
       const sleep = ms => new Promise(res => setTimeout(res, ms));
       const type = async (text, speed = 50) => {
         for (let i = 0; i < text.length; i++) {
@@ -250,6 +256,9 @@
         }
         terminal.innerHTML += "<br>";
       };
+
+      // Скрываем глитч перед сообщением
+      glitch.style.display = 'none';
 
       await type(">>", 50);
       await type(">> > SYSTEM RESPONSE:", 60);
@@ -266,7 +275,12 @@
         await sleep(200);
       }
 
-      await sleep(5000);
+      await sleep(500);
+
+      // Показываем глитч снова перед спамом
+      glitch.style.display = 'block';
+
+      await sleep(4500);
       terminal.innerHTML = '';
       for (let i = 0; i < 300; i++) {
         const span = document.createElement('span');
