--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      max-width: 300px;
       display: none;
       pointer-events: none;
     }
 
     #giphy {
       bottom: 20px;
+      max-width: 400px; /* увеличен */
       z-index: 2;
     }
 
@@ -101,11 +101,16 @@
 </head>
 <body>
   <audio id="bgAudio" src="creepy-bg.mp3" autoplay loop></audio>
+  <audio id="glitchAudio" src="elektronnyie-pomehi-23588.mp3" loop></audio>
+  <audio id="alertAudio" src="zvuk2.mp3"></audio>
+  <audio id="typingAudio" src="klaviatura-kompyutera-30453.mp3"></audio>
+
   <div class="screen" id="terminal">
     <div id="startScreen" class="centered-text">
       <button class="start-btn" onclick="startSequence()">Click to start...</button>
     </div>
   </div>
+
   <img id="giphy" src="giphy.gif" alt="Giphy">
   <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
   <img id="noiseGif" src="noise.gif" alt="Noise">
@@ -116,7 +121,11 @@
     const giphy = document.getElementById('giphy');
     const glitch = document.getElementById('vhsGlitch');
     const noise = document.getElementById('noiseGif');
+
     const bgAudio = document.getElementById('bgAudio');
+    const glitchAudio = document.getElementById('glitchAudio');
+    const alertAudio = document.getElementById('alertAudio');
+    const typingAudio = document.getElementById('typingAudio');
 
     const sleep = ms => new Promise(res => setTimeout(res, ms));
 
@@ -124,11 +133,13 @@
       const span = document.createElement('span');
       if (className) span.className = className;
       terminal.appendChild(span);
-
+      typingAudio.currentTime = 0;
+      typingAudio.play();
       for (let i = 0; i < text.length; i++) {
         span.innerHTML += text[i];
         await sleep(speed);
       }
+      typingAudio.pause();
       terminal.appendChild(document.createElement('br'));
     }
 
@@ -145,11 +156,7 @@
       terminal.innerHTML = '';
       noise.style.display = 'block';
 
-      try {
-        await bgAudio.play();
-      } catch(e) {
-        console.log("User interaction needed for autoplay.");
-      }
+      try { await bgAudio.play(); } catch(e) {}
 
       await typeText(">> CONFESSION-LOG_0173 :: ACCESS GRANTED", 40);
       await typeText(">> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED", 40);
@@ -171,12 +178,9 @@
 
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I prayed. No one answered.”", 200, 'fuchsia');
-
       await sleep(2000);
-
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I heard laughter in the static.”", 200, 'fuchsia');
-
       await typeText(">>", 40);
       await typeText(">> Faith checksum: NULL", 40);
 
@@ -191,6 +195,9 @@
       glitch.style.display = 'block';
       await sleep(100);
       glitch.style.display = 'none';
+
+      bgAudio.pause();
+      glitchAudio.play();
 
       await spawnErrors();
       await sleep(1000);
@@ -245,25 +252,24 @@
         <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:0;">
         <div class="screen" id="terminal" style="position:relative;z-index:2;"></div>
       `;
-
       const terminal = document.getElementById('terminal');
-      const glitch = document.getElementById('vhsGlitch');
       const sleep = ms => new Promise(res => setTimeout(res, ms));
       const type = async (text, speed = 50) => {
+        typingAudio.currentTime = 0;
+        typingAudio.play();
         for (let i = 0; i < text.length; i++) {
           terminal.innerHTML += text[i];
           await sleep(speed);
         }
+        typingAudio.pause();
         terminal.innerHTML += "<br>";
       };
 
-      // Скрываем глитч перед сообщением
-      glitch.style.display = 'none';
-
       await type(">>", 50);
       await type(">> > SYSTEM RESPONSE:", 60);
-
       await sleep(7000);
+
+      alertAudio.play();
 
       const msg = "░░░ WE SEE YOU ░░░";
       for (let i = 0; i < msg.length; i++) {
@@ -275,12 +281,7 @@
         await sleep(200);
       }
 
-      await sleep(500);
-
-      // Показываем глитч снова перед спамом
-      glitch.style.display = 'block';
-
-      await sleep(4500);
+      await sleep(5000);
       terminal.innerHTML = '';
       for (let i = 0; i < 300; i++) {
         const span = document.createElement('span');
