--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
     #giphy {
       bottom: 20px;
-      max-width: 400px; /* увеличен */
       z-index: 2;
+      max-width: 400px;
     }
 
     #vhsGlitch {
@@ -100,17 +100,16 @@
   </style>
 </head>
 <body>
-  <audio id="bgAudio" src="creepy-bg.mp3" autoplay loop></audio>
-  <audio id="glitchAudio" src="elektronnyie-pomehi-23588.mp3" loop></audio>
-  <audio id="alertAudio" src="zvuk2.mp3"></audio>
-  <audio id="typingAudio" src="klaviatura-kompyutera-30453.mp3"></audio>
+  <audio id="bgAudio" src="creepy-bg.mp3" loop></audio>
+  <audio id="errorAudio" src="elektronnyie-pomehi-23588.mp3" loop></audio>
+  <audio id="spamAudio" src="zvuk2.mp3" loop></audio>
+  <audio id="keyboardAudio" src="klaviatura-kompyutera-30453.mp3"></audio>
 
   <div class="screen" id="terminal">
     <div id="startScreen" class="centered-text">
       <button class="start-btn" onclick="startSequence()">Click to start...</button>
     </div>
   </div>
-
   <img id="giphy" src="giphy.gif" alt="Giphy">
   <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
   <img id="noiseGif" src="noise.gif" alt="Noise">
@@ -121,25 +120,42 @@
     const giphy = document.getElementById('giphy');
     const glitch = document.getElementById('vhsGlitch');
     const noise = document.getElementById('noiseGif');
-
     const bgAudio = document.getElementById('bgAudio');
-    const glitchAudio = document.getElementById('glitchAudio');
-    const alertAudio = document.getElementById('alertAudio');
-    const typingAudio = document.getElementById('typingAudio');
+    const errorAudio = document.getElementById('errorAudio');
+    const spamAudio = document.getElementById('spamAudio');
+    const keyboardAudio = document.getElementById('keyboardAudio');
+
+    let keyboardOffset = 0;
+    let isTyping = false;
 
     const sleep = ms => new Promise(res => setTimeout(res, ms));
+
+    async function playKeyboardSound() {
+      if (keyboardAudio.readyState >= 2 && !isTyping) {
+        isTyping = true;
+        keyboardAudio.currentTime = keyboardOffset;
+        keyboardAudio.play();
+      }
+    }
+
+    function stopKeyboardSound() {
+      if (isTyping) {
+        keyboardAudio.pause();
+        keyboardOffset = keyboardAudio.currentTime;
+        isTyping = false;
+      }
+    }
 
     async function typeText(text, speed = 50, className = '') {
       const span = document.createElement('span');
       if (className) span.className = className;
       terminal.appendChild(span);
-      typingAudio.currentTime = 0;
-      typingAudio.play();
+      await playKeyboardSound();
       for (let i = 0; i < text.length; i++) {
         span.innerHTML += text[i];
         await sleep(speed);
       }
-      typingAudio.pause();
+      stopKeyboardSound();
       terminal.appendChild(document.createElement('br'));
     }
 
@@ -147,7 +163,7 @@
       for (let i = 0; i < 2; i++) {
         await typeText(".", 1000);
       }
-      terminal.innerHTML = terminal.innerHTML.slice(0, -4);
+      terminal.innerHTML = terminal.innerHTML.slice(0, -4); // удалить две последние точки и <br>
       await typeText(".", 1000);
     }
 
@@ -172,10 +188,9 @@
 
       await sleep(1000);
       terminal.innerHTML = '';
-
       await sleep(500);
-      giphy.style.display = 'block';
 
+      giphy.style.display = 'block';
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I prayed. No one answered.”", 200, 'fuchsia');
       await sleep(2000);
@@ -197,7 +212,7 @@
       glitch.style.display = 'none';
 
       bgAudio.pause();
-      glitchAudio.play();
+      try { errorAudio.play(); } catch (e) {}
 
       await spawnErrors();
       await sleep(1000);
@@ -248,6 +263,8 @@
     }
 
     async function finalPhase() {
+      errorAudio.pause();
+
       document.body.innerHTML = `
         <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:0;">
         <div class="screen" id="terminal" style="position:relative;z-index:2;"></div>
@@ -255,21 +272,19 @@
       const terminal = document.getElementById('terminal');
       const sleep = ms => new Promise(res => setTimeout(res, ms));
       const type = async (text, speed = 50) => {
-        typingAudio.currentTime = 0;
-        typingAudio.play();
         for (let i = 0; i < text.length; i++) {
           terminal.innerHTML += text[i];
           await sleep(speed);
         }
-        typingAudio.pause();
         terminal.innerHTML += "<br>";
       };
 
       await type(">>", 50);
       await type(">> > SYSTEM RESPONSE:", 60);
-      await sleep(7000);
 
-      alertAudio.play();
+      await sleep(7000);
+      const vhs = document.getElementById('vhsGlitch');
+      if (vhs) vhs.style.display = 'none';
 
       const msg = "░░░ WE SEE YOU ░░░";
       for (let i = 0; i < msg.length; i++) {
@@ -280,6 +295,8 @@
         terminal.appendChild(span);
         await sleep(200);
       }
+
+      try { spamAudio.play(); } catch (e) {}
 
       await sleep(5000);
       terminal.innerHTML = '';
@@ -296,6 +313,7 @@
       }
 
       await sleep(2000);
+      spamAudio.pause();
       document.body.innerHTML = '';
     }
   </script>
