--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CONFESSION-LOG_0173</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
   <style>
@@ -49,9 +49,7 @@
 
     .fuchsia { color: #ed0dd9; }
     .red { color: red; }
-    .glitching {
-      animation: glitch 0.2s infinite;
-    }
+    .glitching { animation: glitch 0.2s infinite; }
 
     @keyframes glitch {
       0% { transform: translate(0, 0); }
@@ -61,7 +59,7 @@
       100% { transform: translate(0, 0); }
     }
 
-    #giphy, #vhsGlitch, #noiseGif {
+    #giphy, #vhsGlitch, #noiseGif, #facePng {
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -75,7 +73,7 @@
       max-width: 400px;
     }
 
-    #vhsGlitch {
+    #vhsGlitch, #noiseGif {
       top: 0;
       left: 0;
       width: 100%;
@@ -84,35 +82,37 @@
       z-index: 0;
     }
 
-    #noiseGif {
+    #noiseGif { opacity: 0.08; z-index: 1; }
+
+    #facePng {
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.08;
-      z-index: 1;
+      width: 100vw;
+      height: 100vh;
       object-fit: cover;
-    }
-
-    audio {
-      display: none;
+      opacity: 0;
+      transition: opacity 10s linear;
+      z-index: 3;
     }
   </style>
 </head>
 <body>
-  <audio id="bgAudio" src="creepy-bg.mp3" loop></audio>
-  <audio id="errorAudio" src="elektronnyie-pomehi-23588.mp3" loop></audio>
-  <audio id="spamAudio" src="zvuk2.mp3" loop></audio>
-  <audio id="keyboardAudio" src="klaviatura-kompyutera-30453.mp3"></audio>
+  <audio id="bgAudio" src="creepy-bg.mp3" autoplay loop></audio>
+  <audio id="altAudio" src="elektronnyie-pomehi-23588.mp3" loop></audio>
+  <audio id="spamAudio" src="zvuk2.mp3"></audio>
+  <audio id="typingAudio" src="klaviatura-kompyutera-30453.mp3"></audio>
+  <audio id="endAudio" src="gromko.mp3"></audio>
 
   <div class="screen" id="terminal">
     <div id="startScreen" class="centered-text">
       <button class="start-btn" onclick="startSequence()">Click to start...</button>
     </div>
   </div>
+
   <img id="giphy" src="giphy.gif" alt="Giphy">
   <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
   <img id="noiseGif" src="noise.gif" alt="Noise">
+  <img id="facePng" src="face.png" alt="Face">
 
   <script>
     const terminal = document.getElementById('terminal');
@@ -120,83 +120,67 @@
     const giphy = document.getElementById('giphy');
     const glitch = document.getElementById('vhsGlitch');
     const noise = document.getElementById('noiseGif');
-    const bgAudio = document.getElementById('bgAudio');
-    const errorAudio = document.getElementById('errorAudio');
-    const spamAudio = document.getElementById('spamAudio');
-    const keyboardAudio = document.getElementById('keyboardAudio');
+    const face = document.getElementById('facePng');
 
-    let keyboardOffset = 0;
-    let isTyping = false;
+    const bgAudio = document.getElementById('bgAudio');
+    const altAudio = document.getElementById('altAudio');
+    const spamAudio = document.getElementById('spamAudio');
+    const typingAudio = document.getElementById('typingAudio');
+    const endAudio = document.getElementById('endAudio');
+
+    let typingInterval;
 
     const sleep = ms => new Promise(res => setTimeout(res, ms));
 
-    async function playKeyboardSound() {
-      if (keyboardAudio.readyState >= 2 && !isTyping) {
-        isTyping = true;
-        keyboardAudio.currentTime = keyboardOffset;
-        keyboardAudio.play();
-      }
+    async function playTypingSound() {
+      if (typingAudio.paused) await typingAudio.play();
     }
 
-    function stopKeyboardSound() {
-      if (isTyping) {
-        keyboardAudio.pause();
-        keyboardOffset = keyboardAudio.currentTime;
-        isTyping = false;
-      }
+    function stopTypingSound() {
+      typingAudio.pause();
     }
 
     async function typeText(text, speed = 50, className = '') {
       const span = document.createElement('span');
       if (className) span.className = className;
       terminal.appendChild(span);
-      await playKeyboardSound();
+
+      await playTypingSound();
       for (let i = 0; i < text.length; i++) {
         span.innerHTML += text[i];
         await sleep(speed);
       }
-      stopKeyboardSound();
-      terminal.appendChild(document.createElement('br'));
-    }
+      stopTypingSound();
 
-    async function dotsPause() {
-      for (let i = 0; i < 2; i++) {
-        await typeText(".", 1000);
-      }
-      terminal.innerHTML = terminal.innerHTML.slice(0, -4); // удалить две последние точки и <br>
-      await typeText(".", 1000);
+      terminal.appendChild(document.createElement('br'));
     }
 
     async function startSequence() {
       startScreen.style.display = 'none';
       terminal.innerHTML = '';
       noise.style.display = 'block';
-
-      try { await bgAudio.play(); } catch(e) {}
+      await bgAudio.play();
 
       await typeText(">> CONFESSION-LOG_0173 :: ACCESS GRANTED", 40);
       await typeText(">> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED", 40);
       await typeText(">>", 40);
       await typeText(">> Parsing soul fragment...", 40);
-      await typeText(">>", 40);
       await typeText(">> [IN LUMEN VERITAS]", 40);
-      await dotsPause();
-      await typeText(">>", 40);
+      await sleep(1000);
       await typeText(">> ██ Data stream unstable ██", 40);
-      await typeText(">>", 40);
       await typeText(">> Salvation Attempt: FAILED", 40);
 
       await sleep(1000);
       terminal.innerHTML = '';
-      await sleep(500);
 
+      await sleep(500);
       giphy.style.display = 'block';
+
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I prayed. No one answered.”", 200, 'fuchsia');
       await sleep(2000);
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I heard laughter in the static.”", 200, 'fuchsia');
-      await typeText(">>", 40);
       await typeText(">> Faith checksum: NULL", 40);
 
       document.body.addEventListener('click', glitchPhase, { once: true });
@@ -206,13 +190,12 @@
       terminal.innerHTML = '';
       giphy.style.display = 'none';
       noise.style.display = 'none';
+      bgAudio.pause();
+      altAudio.play();
 
       glitch.style.display = 'block';
       await sleep(100);
       glitch.style.display = 'none';
-
-      bgAudio.pause();
-      try { errorAudio.play(); } catch (e) {}
 
       await spawnErrors();
       await sleep(1000);
@@ -263,28 +246,16 @@
     }
 
     async function finalPhase() {
-      errorAudio.pause();
-
       document.body.innerHTML = `
         <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:0;">
         <div class="screen" id="terminal" style="position:relative;z-index:2;"></div>
+        <img id="facePng" src="face.png" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;opacity:0;z-index:3;"/>
       `;
       const terminal = document.getElementById('terminal');
-      const sleep = ms => new Promise(res => setTimeout(res, ms));
-      const type = async (text, speed = 50) => {
-        for (let i = 0; i < text.length; i++) {
-          terminal.innerHTML += text[i];
-          await sleep(speed);
-        }
-        terminal.innerHTML += "<br>";
-      };
-
-      await type(">>", 50);
-      await type(">> > SYSTEM RESPONSE:", 60);
-
-      await sleep(7000);
-      const vhs = document.getElementById('vhsGlitch');
-      if (vhs) vhs.style.display = 'none';
+      const face = document.getElementById('facePng');
+      await sleep(1000);
+      await typeText(">> > SYSTEM RESPONSE:", 60);
+      await sleep(5000);
 
       const msg = "░░░ WE SEE YOU ░░░";
       for (let i = 0; i < msg.length; i++) {
@@ -296,9 +267,8 @@
         await sleep(200);
       }
 
-      try { spamAudio.play(); } catch (e) {}
-
-      await sleep(5000);
+      await sleep(500);
+      spamAudio.play();
       terminal.innerHTML = '';
       for (let i = 0; i < 300; i++) {
         const span = document.createElement('span');
@@ -312,8 +282,19 @@
         await sleep(10);
       }
 
-      await sleep(2000);
-      spamAudio.pause();
+      await sleep(5000);
+      document.body.innerHTML = '';
+      await sleep(5000);
+
+      const faceImg = document.createElement('img');
+      faceImg.src = "face.png";
+      faceImg.style = "position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;opacity:0;z-index:3;transition: opacity 10s linear;";
+      document.body.appendChild(faceImg);
+      faceImg.offsetHeight; // force repaint
+      faceImg.style.opacity = 0.07;
+      endAudio.play();
+
+      await sleep(20000);
       document.body.innerHTML = '';
     }
   </script>
